@@ -31,7 +31,6 @@ import static org.apache.commons.collections4.CollectionUtils.isNotEmpty;
 
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.lang3.StringUtils;
 import org.hisp.dhis.organisationunit.OrganisationUnit;
@@ -70,9 +69,7 @@ public class EnrollmentTrackerConverterService
       TrackerPreheat preheat,
       List<org.hisp.dhis.tracker.imports.domain.Enrollment> enrollments,
       UserDetails user) {
-    return enrollments.stream()
-        .map(enrollment -> from(preheat, enrollment, user))
-        .collect(Collectors.toList());
+    return enrollments.stream().map(enrollment -> from(preheat, enrollment, user)).toList();
   }
 
   @Override
